<resources>
    <string name="app_name">Groceries Manager</string>
    <string name="common_scanner">Scanner</string>
    <string name="common_grocery_list">Grocery list</string>
    <string name="common_inventory">Inventory</string>
    <string name="common_grocery_lists">Grocery lists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="common_item_description">Item description</string>
    <string name="common_barcode_id">Barcode/ID</string>
    <string name="common_expiry_date">Expiry Date</string>
    <string name="common_original_description">Original description</string>
    <string name="common_brand">Brand</string>
    <string name="btn_confirm">Confirm</string>
    <string name="common_plus" translatable="false">+</string>
    <string name="create_product">Create product</string>
    <string name="product_description">Product description</string>
    <string name="expiry_date">Expiry date</string>
    <string name="add">Add</string>
    <string name="create_grocery_list">Create grocery list</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="modify_product">Modify product</string>
    <string name="modify_groceryList">Modify grocery list</string>
    <string name="quantity">Quantity</string>
    <string name="note">Note</string>
    <string name="channel_name" translatable="false">GroceriesManagerNotificationChannel</string>
    <string name="scan">Scan</string>
    <string name="barcode">Barcode</string>
    <string name="hint_enter_barcode">Enter barcode</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_add">Add</string>
    <string name="text_no_existing_products">No existing products</string>
    <string name="text_barcode_referenced_with_product">Barcode {0} referenced with product {1}</string>
    <string name="title_reference_barcode">Reference barcode</string>
    <string name="btn_assign_a_product">Assign a product</string>
    <string name="btn_add_to_inventory">Add to inventory</string>
    <string name="btn_add_to_gl">Add to grocery list</string>
    <string name="text_no_existing_grocery_lists">No existing grocery lists</string>
    <string name="product_expires">{0} expires</string>
    <string name="text_product_expires">{0} expires at {1}</string>
    <string name="product_name">Product name</string>
    <string name="brand">Brand</string>
    <string name="btn_save">Save</string>
    <string name="text_barcode_already_referenced">Barcode already referenced</string>
</resources>
