<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <data>
        <variable
                name="inventoryProduct"
                type="de.jl.groceriesmanager.database.inventory.Inventory"/>
        <variable name="clickListener" type="de.jl.groceriesmanager.inventory.InventoryItemListener"/>
    </data>


    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="2dp"
            android:background="@drawable/bg_dialog">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
            <TextView
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:itemDescription="@{inventoryProduct}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/productDescription"
                    android:hint="@string/product_description"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"/>
            <TextView
                    app:itemBarcode="@{inventoryProduct}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/barcode"
                    android:hint="@string/common_barcode_id"
                    app:layout_constraintStart_toStartOf="@+id/productDescription"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/productDescription"
                    app:layout_constraintEnd_toEndOf="@+id/productDescription"/>
            <TextView
                    app:productExpiryDate="@{inventoryProduct}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/expiryDate"
                    android:hint="@string/expiry_date"
                    app:layout_constraintStart_toStartOf="@+id/barcode"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/barcode"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>