<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog"
    >

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_product"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/scrollView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
        >
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content"
                                                               android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/DefaultTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/til_description" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/product_description"
                            android:id="@+id/tiet_description"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/DefaultTextInputLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/til_expiryDateString" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/til_description"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_expiryDateString"
                            android:inputType="none"
                            android:focusable="false"
                            android:drawablePadding="5dp"
                            android:drawableLeft="@drawable/ic_calendar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/expiry_date"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/add"
                        android:text="@string/add"
                        android:drawableLeft="@drawable/ic_add"
                        android:drawablePadding="5dp"
                        app:layout_anchorGravity="bottom|right|end"
                        android:clickable="true"
                        android:id="@+id/addProductBtn"
                        android:focusable="true"
                        app:layout_constraintTop_toBottomOf="@+id/til_expiryDateString"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/primaryColor"
                        android:textColor="@color/primaryDarkColor"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>