<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="groceryListsProducts"
                type="de.jl.groceriesmanager.database.groceryListsProducts.GroceryListsProducts"/>
        <variable name="clickListener" type="de.jl.groceriesmanager.grocery_list.GroceryListItemListener"/>
    </data>
    <com.google.android.material.card.MaterialCardView
            style=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="2dp"
            android:background="@drawable/bg_dialog" app:cardBackgroundColor="@color/primaryLightColor"
            android:onClick="@{() -> clickListener.onClick(groceryListsProducts)}">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textSize="24sp"
                    android:id="@+id/glItemDescription"
                    app:glItemDescription="@{groceryListsProducts}"
                    tools:text="Gorcery list item description"
                    android:textStyle="bold|italic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_description"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"/>
            <View
                    android:id="@+id/titleDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/primaryDarkColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/glItemDescription"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>
            <TextView
                    android:id="@+id/glItemNote"
                    app:glItemNote="@{groceryListsProducts}"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    app:layout_constraintStart_toStartOf="@+id/titleDivider"
                    android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/titleDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintEnd_toStartOf="@+id/glItemQuantity"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
            <TextView
                    android:id="@+id/glItemQuantity"
                    app:glItemQuantity="@{groceryListsProducts}"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/titleDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/glItemNote" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>